# slate

./: .gitattributes  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-01-slate-v0.1.md
docs/superpowers/specs/: 2026-07-01-slate-design.md
scripts/: byte_identity.sh  hook_perf.py
src/slate/: __init__.py  anchors.py  cli.py  config.py  gitctx.py  locks.py  output.py  priming.py  schema.py  search.py  sessions.py  store.py
src/slate/commands/: _common.py  ack.py  confirm.py  delete.py  doctor.py  edit.py  hook.py  init.py  move.py  prime.py  prune.py  query.py  record.py  search_cmd.py  setup.py  status.py  sync.py
tests/: test_cli.py  test_config.py  test_confirm.py  test_edit_delete_move.py  test_golden.py  test_hooks.py  test_init.py  test_locks.py  test_output.py  test_prime_cmd.py  test_priming.py  test_prune_doctor.py  test_query_search.py  test_record.py  test_review_fixes.py  test_rewrite_guard.py  test_schema.py  test_search.py  test_setup_cmd.py  test_store.py  test_sync_status.py
tests/fixtures/golden/.mulch/: mulch.config.yaml
tests/fixtures/golden/.mulch/expertise/: api.jsonl  corrupt.jsonl  testing.jsonl
tests/snapshots/: doctor.txt  prime_files_scoped.txt  prime_full.txt  prime_index.txt  prune_dry_run.txt  query_all.txt  query_full.txt  search_atomic.txt  status.txt
