[project]
name = "slate-memory"
version = "0.1.0"
description = "Git-native memory for AI coding agents: typed lessons in your repo, enforced by hooks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jiro Amato" }]
keywords = ["ai", "agents", "memory", "claude-code", "mulch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Repository = "https://github.com/jiroamato/slate"

[project.optional-dependencies]
# Reserved for v0.2 (semantic search, MCP server) so install commands stay stable.
semantic = []
mcp = []

[project.scripts]
slate = "slate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slate"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
